# Group16-JDA-Reproduction-COMP7404

./: .gitignore  README.md  experiments_config.csv  experiments_config.csv.example  fig4_final.py  jda_comparison.py  pyproject.toml  run_experiments.py  tune_parameters.py
data/coil/: COIL_1.mat  COIL_2.mat
data/pie/: PIE1.mat  PIE2.mat  PIE3.mat  PIE4.mat  PIE5.mat
data/prepared_mnist_usps/: mnist_usps.mat  prepare_mnist_usps.py
data/prepared_pie/: pie_pose05.mat  pie_pose07.mat  pie_pose09.mat  pie_pose27.mat  pie_pose29.mat
data/surf/: Caltech10_zscore_SURF_L10.mat  amazon_zscore_SURF_L10.mat  dslr_zscore_SURF_L10.mat  webcam_zscore_SURF_L10.mat
jda-results-visualization/: DEPLOY.md  _embedded_data.txt  data.json  index.html  package.json  update_embed.py  update_jda.py
paper_experiments/: plot_figure3_comparison.py  plot_figure3_reproduced.py
